# url_shortener

./: .gitignore  liara.json  pyproject.toml  requirements-dev.txt
.github/workflows/: liara.yaml
my_url/routers/: shortner.py
url_shortener/: main.py
url_shortener/models/: url_model.py
url_shortener/routers/: shortner.py
